patch: List.getfirst